fixtures/uitests/tests/ui/fieldless_errors_used_in_callbacks_cant_have_fields.stderr
error[E0063]: missing field `numerator` in initializer of `ArithmeticError`
  --> $OUT_DIR[uniffi_uitests]/errors.uniffi.rs
   |
   |             2 => r#ArithmeticError::r#DivisionByZero{ },
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `numerator`

error[E0063]: missing field `0` in initializer of `ArithmeticError`
  --> $OUT_DIR[uniffi_uitests]/errors.uniffi.rs
   |
   |             3 => r#ArithmeticError::r#UnexpectedError{ },
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `0`
